<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <CheckBoxPreference android:key="enable_receiver" android:title="@string/pref_enable_title" android:defaultValue="true" android:summary="@string/pref_enable_summary"/>
<ListPreference  android:dependency="enable_receiver" android:title="@string/pref_timeout_title" android:defaultValue="5" android:key="timeout" android:entries="@array/timeout_speeds" android:entryValues="@array/timeout_values" android:summary="@string/pref_timeout_summary"/>
<CheckBoxPreference android:summary="@string/pref_conservative_summary" android:key="conservative" android:title="@string/pref_conservative_title" android:defaultValue="false" android:dependency="enable_receiver"></CheckBoxPreference>
<CheckBoxPreference android:key="confirm_action" android:summary="@string/confirm_action_summary" android:title="@string/pref_confirm_action_title" android:dependency="enable_receiver" android:defaultValue="true"></CheckBoxPreference>
<Preference android:key="tts_warning" android:persistent="false" android:title="@string/tts_warning_title" android:summary="@string/tts_warning_summary"></Preference>

</PreferenceScreen>
